# kohl

./: .gitignore  BLUEPRINT.md  Cargo.toml  GLOSSARY.md  README.md  deny.toml  plan.md
.cargo/: config.toml
.github/workflows/: ci.yml  pages.yml
chainspecs/: README.md
consensus/kohl-pow/: Cargo.toml
consensus/kohl-pow/src/: algorithm.rs  lib.rs  mining.rs
docs/: fcmp-audit-hardening.md  fcmp-composition-memo.md  fcmp-design.md  fcmp-mainnet-freeze.md  fcmp-pr0-memo.md  fcmp-runbook.md  fcmp-soak-report.md  production-bootnode.md  tor-runbook.md
examples/: learn_fcmp.py  learn_ringct.py
fuzz/: Cargo.toml
fuzz/fuzz_targets/: clsag_verify.rs  fcmp_verify.rs  transfer_decode.rs
node/: Cargo.toml
node/src/: chain_spec.rs  cli.rs  command.rs  fcmp_capability.rs  main.rs  rpc.rs  service.rs
node/src/dandelion/: engine.rs  handler.rs  mod.rs  protocol.rs  stem_gate.rs
pallets/difficulty/: Cargo.toml
pallets/difficulty/src/: lib.rs  tests.rs
pallets/ringct/: Cargo.toml
pallets/ringct/src/: benchmarking.rs  lib.rs  mainnet_invariants.rs  membership.rs  mock.rs  tests.rs  weights.rs  weights_machine.rs
primitives/kohl-runtime-api/: Cargo.toml
primitives/kohl-runtime-api/src/: lib.rs
primitives/ringct-crypto/: Cargo.toml
primitives/ringct-crypto/benches/: crypto.rs  fcmp_spike.rs
primitives/ringct-crypto/src/: clsag.rs  fcmp.rs  lib.rs  stealth.rs
primitives/ringct-crypto/src/fcmp_spike/: embedding.rs  gates.rs  leaf.rs  merkle.rs  mod.rs  naive_fullset.rs  sa_link.rs
primitives/ringct-primitives/: Cargo.toml
primitives/ringct-primitives/src/: lib.rs
runtime/: Cargo.toml  build.rs
runtime/src/: benchmarks.rs  lib.rs
scripts/: benchmark-ringct.sh  make-chainspec.sh  run-miner.sh  run-seed.sh  setup-seed.sh
scripts/systemd/: kohl-miner.env.example  kohl-miner.service  kohl-seed.env.example  kohl-seed.service
wallet/: Cargo.toml
wallet/src/: decoy.rs  lib.rs  main.rs  membership.rs  rpc.rs  tests.rs
website/: 404.html  CNAME  index.html  robots.txt  sitemap.xml  styles.css  theme.js
website/run/: index.html
website/tor/: index.html
