[package]
name = "kohl-node"
description = "The kohl chain node: RandomX PoW private-cash L1"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "kohl"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
futures = { workspace = true }
log = "0.4"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
jsonrpsee = { workspace = true }
codec = { workspace = true, features = ["std"] }

sc-cli = { workspace = true }
sc-service = { workspace = true }
sc-executor = { workspace = true }
sc-network = { workspace = true }
sc-network-sync = { workspace = true }
sc-network-transactions = { workspace = true }
sc-network-types = { workspace = true }
sc-consensus = { workspace = true }
sc-consensus-pow = { workspace = true }
sc-client-api = { workspace = true }
sc-transaction-pool = { workspace = true }
sc-transaction-pool-api = { workspace = true }
sc-basic-authorship = { workspace = true }
sc-offchain = { workspace = true }
sc-telemetry = { workspace = true }

sp-api = { workspace = true, features = ["std"] }
sp-block-builder = { workspace = true, features = ["std"] }
sp-blockchain = { workspace = true }
sp-consensus = { workspace = true }
sp-consensus-pow = { workspace = true, features = ["std"] }
sp-core = { workspace = true, features = ["std"] }
sp-inherents = { workspace = true, features = ["std"] }
sp-io = { workspace = true, features = ["std"] }
sp-runtime = { workspace = true, features = ["std"] }
sp-timestamp = { workspace = true }

parking_lot = { workspace = true }
futures-timer = { workspace = true }
array-bytes = { workspace = true }
async-trait = "0.1"

substrate-frame-rpc-system = { workspace = true }
frame-system = { workspace = true, features = ["std"] }
frame-benchmarking-cli = { workspace = true }

kohl-runtime = { workspace = true, features = ["std"] }
kohl-runtime-api = { workspace = true, features = ["std"] }
kohl-pow = { workspace = true, features = ["node"] }
pallet-ringct = { workspace = true, features = ["std"] }
ringct-crypto = { workspace = true, features = ["std"] }

[features]
default = []
# Use RandomX for mining/verification instead of the BLAKE2b dev fallback.
randomx = ["kohl-pow/randomx"]
# Extrinsic weight benchmarks via `kohl benchmark pallet` (registers RingCT
# host functions — stock frame-omni-bencher cannot run these).
runtime-benchmarks = [
    "frame-benchmarking-cli/runtime-benchmarks",
    "kohl-runtime/runtime-benchmarks",
    "pallet-ringct/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "sc-service/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
]
