[package]
name = "kohl-runtime"
description = "The kohl chain runtime: a pure private-cash L1 (RingCT + RandomX PoW)"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { workspace = true }
scale-info = { workspace = true }
serde_json = { workspace = true, features = ["alloc"] }

frame-executive = { workspace = true }
frame-support = { workspace = true, features = ["experimental"] }
frame-system = { workspace = true }
frame-system-rpc-runtime-api = { workspace = true }
pallet-timestamp = { workspace = true }

pallet-ringct = { workspace = true }
pallet-difficulty = { workspace = true }
ringct-primitives = { workspace = true }
kohl-runtime-api = { workspace = true }

sp-api = { workspace = true }
sp-block-builder = { workspace = true }
sp-core = { workspace = true, features = ["serde"] }
sp-genesis-builder = { workspace = true }
sp-inherents = { workspace = true }
sp-offchain = { workspace = true }
sp-runtime = { workspace = true, features = ["serde"] }
sp-transaction-pool = { workspace = true }
sp-version = { workspace = true, features = ["serde"] }

[build-dependencies]
substrate-wasm-builder = { workspace = true, optional = true }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "serde_json/std",
    "frame-executive/std",
    "frame-support/std",
    "frame-system/std",
    "frame-system-rpc-runtime-api/std",
    "pallet-timestamp/std",
    "pallet-ringct/std",
    "pallet-difficulty/std",
    "ringct-primitives/std",
    "kohl-runtime-api/std",
    "sp-api/std",
    "sp-block-builder/std",
    "sp-core/std",
    "sp-genesis-builder/std",
    "sp-inherents/std",
    "sp-offchain/std",
    "sp-runtime/std",
    "sp-transaction-pool/std",
    "sp-version/std",
    "substrate-wasm-builder",
]
