[package]
name = "kohl-wallet"
description = "Wallet for the kohl chain: scan for owned outputs and build RingCT transfers"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
name = "kohl_wallet"
path = "src/lib.rs"

[[bin]]
name = "kohl-wallet"
path = "src/main.rs"

[dependencies]
codec = { workspace = true, features = ["std"] }
clap = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
ureq = { version = "2", features = ["json"] }
hex = "0.4"

sp-core = { workspace = true, features = ["std"] }
frame-support = { workspace = true, features = ["std"] }
ringct-crypto = { workspace = true, features = ["std"] }
ringct-primitives = { workspace = true, features = ["std"] }
pallet-ringct = { workspace = true, features = ["std"] }
kohl-runtime = { workspace = true, features = ["std"] }
