[package]
name = "pallet-difficulty"
description = "LWMA proof-of-work difficulty adjustment for the kohl chain"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
codec = { workspace = true }
scale-info = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
pallet-timestamp = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
ringct-primitives = { workspace = true }

[dev-dependencies]
sp-io = { workspace = true }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "frame-support/std",
    "frame-system/std",
    "pallet-timestamp/std",
    "sp-core/std",
    "sp-runtime/std",
    "sp-io/std",
    "ringct-primitives/std",
]
try-runtime = [
    "frame-support/try-runtime",
    "frame-system/try-runtime",
    "pallet-timestamp/try-runtime",
    "sp-runtime/try-runtime",
]
