[package]
name = "pallet-ringct"
description = "Confidential cash pallet for the kohl chain (Phase 1: transparent UTXO core)"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { workspace = true }
scale-info = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
frame-benchmarking = { workspace = true, optional = true, default-features = false }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-inherents = { workspace = true }
ringct-primitives = { workspace = true }
ringct-crypto = { workspace = true }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "frame-support/std",
    "frame-system/std",
    "frame-benchmarking?/std",
    "sp-io/std",
    "sp-runtime/std",
    "sp-inherents/std",
    "ringct-primitives/std",
    "ringct-crypto/std",
]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
    "ringct-crypto/std",
]
try-runtime = [
    "frame-support/try-runtime",
    "frame-system/try-runtime",
    "sp-runtime/try-runtime",
]
