[package]
name = "ringct-crypto"
description = "Confidential-transaction cryptography for the kohl chain: Pedersen commitments, Bulletproofs, and the runtime host-function boundary"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(substrate_runtime)"] }

[dependencies]
sp-runtime-interface = { workspace = true }
ringct-primitives = { workspace = true }

# Native-only (host/prover side). Never compiled into the WASM runtime.
bulletproofs = { version = "5", optional = true }
curve25519-dalek = { version = "4", features = ["rand_core", "digest"], optional = true }
merlin = { version = "3", optional = true }
rand = { version = "0.8", optional = true }
sha2 = { version = "0.10", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "crypto"
harness = false

[features]
default = ["std"]
std = [
    "sp-runtime-interface/std",
    "ringct-primitives/std",
    "dep:bulletproofs",
    "dep:curve25519-dalek",
    "dep:merlin",
    "dep:rand",
    "dep:sha2",
]
